--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -379,6 +379,7 @@ const itemsDefaultHasPage = meta.itemsHasPage ?? false;
               sortBy={sortBy}
               sortOrder={sortOrder}
               manualOrder={manualOrder}
+              client={finalClient}
             />
             <slot name="belowItemsInjection" />
           </>
