--- a/src/components/Forms/Form.astro
+++ b/src/components/Forms/Form.astro
@@ -46,7 +46,7 @@ const {
   consentLearnMoreLabel = "Learn more",
   consentLearnMoreUrl = "/privacy-policy",
   consentWrapperClass = "flex items-start text-left mb-[var(--spacing-md)]",
-  consentInputClass = "mr-[var(--spacing-sm)] mt-[4px] w-4 h-4 checked:bg-primary",
+  consentInputClass = "mr-[var(--spacing-sm)] mt-[4px] w-4 h-4 accent-primary",
   consentLabelClass = "m-0",
 } = Astro.props;
 ---
